<package format="3">
  <name>leap_hand_ros</name>
  <version>0.0.1</version>
  <description>Teleoperation package for controlling the LEAP hand using Ultraleap tracking</description>

  <maintainer email="anag@todo.todo">anag</maintainer>
  <license>MIT</license> <!-- You can replace MIT with whatever license you want -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>
  <build_depend>python3</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>resource_retriever</exec_depend>




  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

